--- a/index-img1.css
+++ b/index-img1.css
@@ -1,10 +1,9 @@
-.container {
-	width: 400px;
-	height: 300px;
-	border: 2px solid black;
+.img1-container {
+	width: 350px;
+	height: 200px;
 	position: relative;
 }
-.head {
+.img1-head {
 	z-index: 20;
 	position: absolute;
 	width: 100px;
@@ -14,7 +13,7 @@
 	right: 160px;
 	bottom: 130px;
 }
-.head-l {
+.img1-head-l {
 	z-index: 20;
 	position: absolute;
 	width: 25px;
@@ -23,7 +22,7 @@
 	right: 195px;
 	bottom: 110px;
 }
-.head-r {
+.img1-head-r {
 	position: absolute;
 	z-index: 30;
 	width: 20px;
@@ -32,7 +31,7 @@
 	right: 160px;
 	bottom: 110px;
 }
-.face {
+.img1-face {
 	z-index: 40;
 	position: absolute;
 	width: 60px;
@@ -42,7 +41,7 @@
 	right: 165px;
 	bottom: 145px;
 }
-.face-mount {
+.img1-face-mount {
 	z-index: 20;
 	position: absolute;
 	width: 40px;
@@ -51,24 +50,24 @@
 	right: 165px;
 	bottom: 120px;
 }
-.eye {
+.img1-eye {
 	width: 10px;
 	height: 10px;
 	background: rgb(10, 22, 32);
 	border-radius: 5px;
 	z-index: 40;
 }
-.eye-l {
+.img1-eye-l {
 	position: absolute;
 	right: 195px;
 	bottom: 148px;
 }
-.eye-r {
+.img1-eye-r {
 	position: absolute;
 	right: 166px;
 	bottom: 148px;
 }
-.shield {
+.img1-shield {
 	position: absolute;
 	right: 105px;
 	bottom: 80px;
@@ -77,7 +76,7 @@
 	border-radius: 50%;
 	background: rgb(197, 51, 82);
 }
-.shield:after {
+.img1-shield:after {
 	position: absolute;
 	content: "";
 	z-index: 10;
@@ -88,7 +87,7 @@
 	border-radius: 7px;
 	background: rgb(51, 11, 20);
 }
-.arm-left {
+.img1-arm-left {
 	position: absolute;
 	z-index: 20;
 	width: 45px;
@@ -97,7 +96,7 @@
 	right: 150px;
 	bottom:110px;
 }
-.arm-left:after {
+.img1-arm-left:after {
 	position: absolute;
 	width: 25px;
 	height: 25px;
@@ -107,7 +106,7 @@
 	right: -20px;
 	bottom: -2px;
 }
-.arm-right {
+.img1-arm-right {
 	position: absolute;
 	z-index: 20;
 	width: 40px;
@@ -117,7 +116,7 @@
 	right: 245px;
 	bottom:110px;
 }
-.arm-right:after {
+.img1-arm-right:after {
 	content: "";
 	position: absolute;
 	z-index: 20;
@@ -129,7 +128,7 @@
 	bottom:10px;
 	transform: rotate(45deg);
 }
-.body {
+.img1-body {
 	z-index: 20;
 	position: absolute;
 	width: 80px;
@@ -139,7 +138,7 @@
 	right: 188px;
 	bottom: 65px;
 }
-.hand-right {
+.img1-hand-right {
 	position: absolute;
 	z-index: 20;
 	width: 25px;
@@ -149,7 +148,7 @@
 	right: 287px;
 	bottom:130px;
 }
-.finger-right{
+.img1-finger-right{
 	position: absolute;
 	z-index: 20;
 	width: 5px;
@@ -159,7 +158,7 @@
 	right: 287px;
 	bottom:138px;
 }
-.sword {
+.img1-sword {
 	position: absolute;
 	z-index: 20;
 	width: 15px;
@@ -168,7 +167,7 @@
 	right: 292px;
 	bottom:138px;
 }
-.sword:after {
+.img1-sword:after {
 	position: absolute;
 	content: "";
 	z-index: 21;
@@ -179,7 +178,7 @@
 	bottom: 54px;
 	transform: rotate(45deg);
 }
-.sword-handle {
+.img1-sword-handle {
 	position: absolute;
 	z-index: 20;
 	width: 30px;
@@ -189,7 +188,7 @@
 	right: 285px;
 	bottom:145px;
 }
-.sword-handle:after {
+.img1-sword-handle:after {
 	content: "";
 	position: absolute;
 	z-index: 20;
@@ -200,7 +199,7 @@
 	right: 9px;
 	bottom: -20px;
 }
-.dec1 {
+.img1-dec1 {
 	position: absolute;
 	z-index: 30;
 	width: 15px;
@@ -210,7 +209,7 @@
 	right: 253px;
 	bottom: 60px;
 }
-.dec2 {
+.img1-dec2 {
 	position: absolute;
 	z-index: 30;
 	width: 15px;
@@ -220,7 +219,7 @@
 	right: 243px;
 	bottom: 60px;
 }
-.dec3 {
+.img1-dec3 {
 	position: absolute;
 	z-index: 30;
 	width: 15px;
@@ -230,7 +229,7 @@
 	right: 233px;
 	bottom: 60px;
 }
-.dec4 {
+.img1-dec4 {
 	position: absolute;
 	z-index: 30;
 	width: 15px;
@@ -240,7 +239,7 @@
 	right: 223px;
 	bottom: 60px;
 }
-.dec5 {
+.img1-dec5 {
 	position: absolute;
 	z-index: 30;
 	width: 15px;
@@ -250,7 +249,7 @@
 	right: 213px;
 	bottom: 60px;
 }
-.dec6 {
+.img1-dec6 {
 	position: absolute;
 	z-index: 30;
 	width: 15px;
@@ -260,7 +259,7 @@
 	right: 203px;
 	bottom: 60px;
 }
-.dec7 {
+.img1-dec7 {
 	position: absolute;
 	z-index: 30;
 	width: 19px;
@@ -270,7 +269,7 @@
 	right: 188px;
 	bottom: 60px;
 }
-.leg-r{
+.img1-leg-r{
 	position: absolute;
 	z-index: 20;
 	width: 45px;
@@ -281,7 +280,7 @@
 	bottom:50px;
 	transform: rotate(45deg);
 }
-.leg-r:after{
+.img1-leg-r:after{
 	content: "";
 	position: absolute;
 	z-index: 20;
@@ -293,7 +292,7 @@
 	bottom:-7px;
 	transform: rotate(45deg);
 }
-.leg-l{
+.img1-leg-l{
 	position: absolute;
 	z-index: 20;
 	width: 65px;
@@ -304,7 +303,7 @@
 	bottom:35px;
 	transform: rotate(-45deg);
 }
-.shadow {
+.img1-shadow {
 	position: absolute;
 	z-index: 20;
 	width:155px;
@@ -314,5 +313,3 @@
 	right: 170px;
 	bottom:15px;
 }
-
-
