--- a/index.css
+++ b/index.css
@@ -4,8 +4,9 @@
   --second-color: #8d93ab;
   --third-color: #d6e0f0;
   --back-grad: linear-gradient(180deg, var(--clear-main) 0%, var(--third-color) 35%, var(--second-color) 100%);
+  --dark-main: #393b44;
+  --shadow: 5px 5px 15px rgba(0, 0, 0, .3);
 }
-
 * {
   margin: 0;
   padding: 0;
@@ -13,23 +14,20 @@
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 16px;
 }
-
 .tittle {
   font-size: 4rem;
   position: absolute;
-  text-shadow: 5px 5px 15px var(--dark-main);
+  text-shadow: var(--shadow);
   left: 8rem;
   top: 1rem;
 }
-
 body {
   background: var(--clear-main);
   color: white;
 }
-
 .game__container {
   height: 90vh;
-  width: 80vw;
+  width: 900px;
   margin: 2rem auto;
   border-radius: 1rem;
   background: var(--back-grad);
@@ -37,10 +35,9 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  box-shadow: 5px 5px 15px var(--dark-main);
-  opacity: 0;
+  box-shadow: var(--shadow);
+  transition: .5s;
 }
-
 .card {
   width: 40%;
   height: 80%;
@@ -48,10 +45,9 @@ body {
   margin: 2rem;
   padding: 1rem;
   border-radius: .8rem;
-  box-shadow: 5px 5px 15px var(--dark-main);
+  box-shadow:var(--shadow);
   
 }
-
 .card__items {
   height: 100%;
   display: flex;
@@ -59,37 +55,32 @@ body {
   justify-content: space-between;
   list-style: none;
 }
-
 .card__items--name {
   text-align: center;
   font-size: 2.5rem;
   text-transform: uppercase;
   font-weight: bold;
 }
-
 .card__items--logic {
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
-
 .card__items--logic div button {
   width: 5rem;
   height: 5rem;
   border-radius: 50%;
   border: none;
   font-size: 1.5rem;
-  box-shadow: 0px 10px 15px var(--dark-main);
+  box-shadow: var(--shadow);
   background: var(--dark-main);
   color: var(--clear-main);
   outline: none;
   transition: .5s;
 }
-
 .card__items--logic div button:active {
   transform: scale(.9);
 }
-
 .card__items--img {
   width: 80%;
   height: 30%;
@@ -97,7 +88,6 @@ body {
   border: 4px solid var(--dark-main);
   margin: 0 auto;
 }
-
 .author {
   color: var(--dark-main);
   position: absolute;
@@ -110,17 +100,14 @@ body {
   background: #393b445d;
   transition: .8s;
 }
-
 .author:hover {
   background: #393b44;
   color: var(--clear-main);
 }
-
 .author a img {
   margin: 0 0 0 1rem ;
   width: 1.5rem;
 }
-
 /*_________MODAL  */
 
 .modal {
@@ -136,8 +123,8 @@ body {
   background: var(--back-grad) ;
   border-radius: 1rem;
   box-shadow: 5px 5px 15px var(--dark-main);
+  transition: .5s;
 }
-
 .modal__img, .modal__detail {
   width: 40%;
   margin: 0 auto;
@@ -146,22 +133,18 @@ body {
   background: var(--third-color);
   padding: 1.5rem;
 }
-
- .modal__detail ul{
+.modal__detail ul{
   list-style: none;
 }
-
 .modal__detail  {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
 }
-
 .modal__detail ul li h2 {
   font-size: 2rem;
 }
-
 .modal__detail li button {
   width: 12rem;
   height: 3rem;
@@ -172,9 +155,14 @@ body {
   color: var(--clear-main);
   transition: .5s;
   outline: none;
-  box-shadow: 0px 10px 15px var(--dark-main);
+  box-shadow: var(--shadow);
 }
-
 .modal__detail li button:active {
   transform: scale(.9);
+}
+.hide {
+  display: none;
+}
+#remainLife1, #remainLife2, #childSpan2 {
+  color: red;
 }
